--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.3.1",
     "tailwindcss": "3.3.3"
   }
 }
