--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint-fix": "next lint -- --fix"
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.4.12",
+    "eslint-import-resolver-alias": "^1.1.2",
     "formik": "^2.4.3",
     "next": "13.4.12",
     "postcss": "8.4.27",
