--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-airbnb": "^19.0.4",
