--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint-fix": "next lint -- --fix"
+    "lint-fix": "next lint -- --fix",
+    "svgo": "svgo --config=svgo.config.js ./icons"
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.45.2",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.1",
+    "svgo": "^3.0.2",
     "tailwindcss": "3.3.3",
     "yup": "^1.2.0"
   }
