--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "lint-fix": "next lint -- --fix",
-    "svgo": "svgo --config=svgo.config.js ./icons"
+    "svgo": "svgo ./icons"
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
