--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lorry",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,26 +8,27 @@
     "start": "next start",
     "lint": "next lint",
     "lint-fix": "next lint -- --fix",
-    "svgo": "svgo ./icons"
+    "svgo": "svgo ./icons/**"
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
-    "@svgr/webpack": "^8.1.0",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.45.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "13.4.12",
-    "eslint-import-resolver-alias": "^1.1.2",
     "formik": "^2.4.3",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
+    "next": "13.4.17",
+    "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.2",
+    "react-hook-form": "^7.45.4",
     "react-phone-input-2": "^2.15.1",
-    "react-phone-number-input": "^3.3.1",
-    "svgo": "^3.0.2",
-    "tailwindcss": "3.3.3",
+    "react-phone-number-input": "^3.3.2",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "svgo": "^3.0.2",
+    "@svgr/webpack": "^8.1.0",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.47.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-config-prettier": "^9.0.0"
   }
 }
