--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "svgo": "^3.0.2",
+    "@next/eslint-plugin-next": "^13.4.17",
     "@svgr/webpack": "^8.1.0",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-config-prettier": "^9.0.0"
+    "svgo": "^3.0.2"
   }
 }
