--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,7 @@ trim_trailing_whitespace = false
 insert_final_newline = true
 indent_style = space
 indent_size = 4
+quote_type = single
 
 [{package.json,*.yml}]
 indent_style = space
