--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,8 @@ trim_trailing_whitespace = false
 insert_final_newline = true
 indent_style = space
 indent_size = 4
+
+[{*.js, *.jsx}]
 quote_type = single
 
 [{package.json,*.yml}]
