--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint-fix": "next lint -- --fix",
+    "lint": "run-p lint:*",
+    "lint:scripts": "next lint",
+    "lint:styles": "stylelint \"src/**/*.css\"",
+    "lint-fix": "run-p lint-fix:*",
+    "lint-fix:scripts": "npm run lint:scripts -- --fix",
+    "lint-fix:styles": "npm run lint:styles -- --fix",
     "svgo": "svgo ./src/assets/**"
   },
   "dependencies": {
@@ -30,6 +34,12 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "npm-run-all": "^4.1.5",
+    "stylelint": "^15.10.3",
+    "stylelint-config-css-modules": "^4.3.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-order": "^6.0.3",
     "svgo": "^3.0.2"
   }
 }
