--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.45.4",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.2",
+    "tua-body-scroll-lock": "^1.4.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
